fix:fixed problem related to image not showing up in the pdp

--- a/ecomm/src/components/Pdp.css
+++ b/ecomm/src/components/Pdp.css
@@ -36,8 +36,8 @@
 }
 
 .pdp-info-paragraph {
-    font-size: 18px;
-    margin: 15px 0;
+    font-size: 22px;
+    margin: 20px 0;
 }
 
 .pdp-image {
